fixed enough sizing issues to be readable

--- a/mystyle.css
+++ b/mystyle.css
@@ -16,6 +16,7 @@ html,body {
   );
   justify-content: center;
   align-items: center;
+  position:absolute;
 }
 .container{
   margin: auto;
@@ -43,12 +44,12 @@ border-right: 2px solid #323032;
 }
 .right{
   flex: 1;
-  width: 100px;
   height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+
 }
 .line {
   height: 80%;
@@ -89,9 +90,10 @@ border-right: 2px solid #323032;
   #76323F 10px,
   #76323F 13px
   );
+
   height: 2em;
   border: 2px solid #76323F;
-  width: 20%;
+  flex: 1;
   display: flex;
   justify-content: center;
   align-items: center;
